# DCVehicleCounters

DCVehicleCounter/: .CMakeLists.txt.swp  .cproject  .project  BackgroundProcessor.cpp  BackgroundProcessor.h  Blinker.cpp  Blinker.h  CMakeLists.txt  DCVehicleCounter.1  DayNonJamProcessor.cpp  DayNonJamProcessor.h  EdgeDetector.cpp  EdgeDetector.h  ErrorCodes.h  ImageEnhancer.cpp  ImageEnhancer.h  ObjectSplitter.cpp  ObjectSplitter.h  ObjectSplitterVehicleCounter.cpp  ObjectSplitterVehicleCounter.h  Resizer.cpp  Resizer.h  SaveLoadConfig.cpp  SaveLoadConfig.h  VehicleMerger.cpp  VehicleMerger.h  VehicleTracking.cpp  VehicleTracking.h  debug.h  main.cpp
DCVehicleCounter.xcodeproj/: project.pbxproj
DCVehicleCounter.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
DCVehicleCounter/config/: BL_CN.xml  BL_DMTB.xml  BL_FLN.xml  DNP_DMT.xml  VT_CN.xml  VT_DMT.xml  VT_DMTB.xml  VT_FLN.xml
DCVehicleCounter/pt/: PBAS.cpp  PBAS.h  PixelBasedAdaptiveSegmenter.cpp  PixelBasedAdaptiveSegmenter.h
